# VertexCoverKernelization

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  main.py  pyproject.toml
src/vcker/graphs/: __init__.py  graph.py  utils.py
src/vcker/input_data/: __init__.py  barabasi_albert.py  base.py  bhoslib.py  erdos_renyi.py  pace2019.py  pam.py  snap.py  utils.py
tests/: handler_test_base.py  test_barabasi_albert.py  test_bhoslib.py  test_erdos_renyi.py  test_pace2019.py  test_pam.py  test_snap.py
