[project]
name = "vcker"
version = "0.1.0"
description = "A benchmark of various kernelization methods for the parametrized vertex cover"
readme = "README.md"
requires-python = ">=3.13"
# --- Dependencies---
dependencies = [
    "pandas>=3.0.1",
    "requests>=2.32.5",
    "tqdm>=4.67.3",
]

[dependency-groups]
dev = [
    "black>=26.3.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.5",
]
jupyter = [
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "jupyterlab>=4.5.5",
    "nbconvert>=7.17.0",
    "notebook>=7.5.4",
]

# --- Packaging ---
[build-system]
requires = ["uv_build"]
build-backend = "uv_build"
